--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="icon-512.png" />
-    <title>Placeholder - Placeholder</title>
+    <title>Know - General Knowledge</title>
   </head>
   <body>
     <div id="root"></div>
